--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -455,12 +455,13 @@ p.technology_text{
 .building_items.final form{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
     padding: 27px;
     grid-gap: 17px;
     font-family: Circe, sans-serif;
     font-size: 25px;
     text-transform: uppercase;
+    position: relative;
 }
 .input{
     border: none;
@@ -470,6 +471,7 @@ p.technology_text{
     border-bottom: 1px solid #D7D8FF;
     transition: border-bottom .3s linear;
     background: none;
+    resize: none;
 }
 .input:hover,
 .input:focus{
@@ -549,6 +551,7 @@ p.technology_text{
     font-size: 26px;
     text-transform: uppercase;
     cursor: pointer;
+    border: none;
 }
 .building_items.final{
     margin-top: 66px;
@@ -558,7 +561,6 @@ p.technology_text{
 }
 .title_final.active{
     display: flex;
-    grid-template-columns: repeat(7, auto);
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -623,6 +625,32 @@ p.technology_text{
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+.loader,.loader svg{
+    display: none;
+}
+.loader.active{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loader.active svg{
+    fill: #1f2389;
+    animation: spin 2s linear infinite;
+}
+@keyframes spin{
+    0%{
+        transform: rotate(0);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
 
 @media screen and (max-width: 1000px) {
