--- a/assets/styles/preloader.css
+++ b/assets/styles/preloader.css
@@ -1,157 +1,1 @@
-.preloader{
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 999;
-    background: #fff;
-    margin-top: -20px;
-    transition: display 2s linear;
-}
-.preloader svg{
-    width: 350px;
-    height: 350px;
-}
-.preloader svg polygon{
-    fill: transparent;
-    stroke-width: 1;
-    stroke: black;
-}
-.st0{
-    stroke: #1f2389;
-    stroke-dasharray: 500;
-    stroke-dashoffset: 500;
-    animation: st0 5s ease forwards infinite;
-}
-@keyframes st0 {
-    0%{
-        stroke-dashoffset: 500;
-        stroke-width: 1;
-    }
-    10%{
-        stroke-dashoffset: 500;
-    }
-    20%{
-        stroke-dashoffset: 0;
-    }
-    25%{
-        fill: transparent;
-        stroke-width: 1;
-    }
-    30%{
-        stroke-dashoffset: 0;
-        fill: #1f2389;
-        stroke-width: 0;
-    }
-    70%{
-        stroke-dashoffset: 0;
-        fill: #1f2389;stroke-width: 1;
-    }
-    75%{
-        fill: transparent;
-    }
-    80%{
-        stroke-dashoffset: 0;
-    }
-    90%{
-        stroke-dashoffset: 500;
-    }
-    100%{
-        stroke-dashoffset: 500;
-    }
-}
-
-.st1 {
-    stroke: black;
-    stroke-dasharray: 686;
-    stroke-dashoffset: 686;
-    animation: st1 5s ease forwards infinite;
-}
-/*686*/
-
-@keyframes st1 {
-    0%{
-        stroke-dashoffset: 686;
-        stroke-width: 1;
-    }
-    10%{
-        stroke-dashoffset: 686;
-    }
-    20%{
-        stroke-dashoffset: 0;
-    }
-    25%{
-        fill: transparent;
-        stroke-width: 1;
-    }
-    30%{
-        stroke-dashoffset: 0;
-        fill: #000;
-        stroke-width: 0;
-    }
-    70%{
-        stroke-dashoffset: 0;
-        fill: #000;
-        stroke-width: 1;
-    }
-    75%{
-        fill: transparent;
-    }
-    80%{
-        stroke-dashoffset: 0;
-    }
-    90%{
-        stroke-dashoffset: 686;
-    }
-    100%{
-        stroke-dashoffset: 686;
-    }
-}
-
-.st2 {
-    stroke: #1f2389;
-    stroke-dasharray: 214;
-    stroke-dashoffset: 214;
-    animation: st2 5s ease forwards infinite;
-}
-
-@keyframes st2 {
-    0%{
-        stroke-dashoffset: 214;
-        stroke-width: 1;
-    }
-    10%{
-        stroke-dashoffset: 214;
-    }
-    20%{
-        stroke-dashoffset: 0;
-    }
-    25%{
-        fill: transparent;
-        stroke-width: 1;
-    }
-    30%{
-        stroke-dashoffset: 0;
-        fill: #1f2389;
-        stroke-width: 0;
-    }
-    70%{
-        stroke-dashoffset: 0;
-        fill: #1f2389;
-        stroke-width: 1;
-    }
-    75%{
-        fill: transparent;
-    }
-    80%{
-        stroke-dashoffset: 0;
-    }
-    90%{
-        stroke-dashoffset: 214;
-    }
-    100%{
-        stroke-dashoffset: 214;
-    }
-}
+.preloader{display:flex;width:100%;height:100vh;justify-content:center;align-items:center;position:fixed;z-index:999;background:#fff;margin-top:-20px;transition:display 2s linear}.preloader svg{width:350px;height:350px}.preloader svg polygon{fill:transparent;stroke-width:1;stroke:black}.st0{stroke:#1f2389;stroke-dasharray:500;stroke-dashoffset:500;animation:5s infinite forwards st0}@keyframes st0{0%{stroke-dashoffset:500;stroke-width:1}10%,100%,90%{stroke-dashoffset:500}20%,80%{stroke-dashoffset:0}25%{fill:transparent;stroke-width:1}30%{stroke-dashoffset:0;fill:#1f2389;stroke-width:0}70%{stroke-dashoffset:0;fill:#1f2389;stroke-width:1}75%{fill:transparent}}.st1{stroke:black;stroke-dasharray:686;stroke-dashoffset:686;animation:5s infinite forwards st1}@keyframes st1{0%{stroke-dashoffset:686;stroke-width:1}10%,100%,90%{stroke-dashoffset:686}20%,80%{stroke-dashoffset:0}25%{fill:transparent;stroke-width:1}30%{stroke-dashoffset:0;fill:#000;stroke-width:0}70%{stroke-dashoffset:0;fill:#000;stroke-width:1}75%{fill:transparent}}.st2{stroke:#1f2389;stroke-dasharray:214;stroke-dashoffset:214;animation:5s infinite forwards st2}@keyframes st2{0%{stroke-dashoffset:214;stroke-width:1}10%,100%,90%{stroke-dashoffset:214}20%,80%{stroke-dashoffset:0}25%{fill:transparent;stroke-width:1}30%{stroke-dashoffset:0;fill:#1f2389;stroke-width:0}70%{stroke-dashoffset:0;fill:#1f2389;stroke-width:1}75%{fill:transparent}}
